# deepreasoning

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  config.toml  docker-compose.yml
frontend/: bun.lockb  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/docs/: page.tsx
frontend/components/: chat.tsx  settings.tsx
frontend/components/ui/: copy-button.tsx  markdown-editor.tsx  textarea.tsx  toast.tsx  use-toast.ts
frontend/hooks/: use-feature-flags.ts
frontend/providers/: posthog.tsx
src/: config.rs  error.rs  handlers.rs  main.rs
src/clients/: anthropic.rs  deepseek.rs  mod.rs
src/models/: request.rs  response.rs
